fixed issue with margin right and the scrollbar

--- a/app/assets/stylesheets/components/_scrolldown_bar.scss
+++ b/app/assets/stylesheets/components/_scrolldown_bar.scss
@@ -6,7 +6,7 @@
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: #0b021f;
 }
 
 /* Handle */
